// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jeden startující 1`] = `
<div>
  <table
    className="Startujici-table table table-striped table-bordered table-condensed"
  >
    <tbody>
      <tr>
        <td
          className="Startujici-na-trase"
          onClick={[Function]}
        >
          1
        </td>
        <td
          className="Startujici-na-trase"
          onClick={[Function]}
        >
          3
        </td>
        <td
          className="Startujici-dokonceno"
          onClick={[Function]}
        >
          7
        </td>
        <td
          className="Startujici-nedokonceno"
          onClick={[Function]}
        >
          25
        </td>
      </tr>
    </tbody>
  </table>
  <div>
    <span>
      legenda:
    </span>
    <span
      className="Startujici-dokonceno Startujici-legenda"
    >
      dokončeno
    </span>
    <span
      className="Startujici-nedokonceno Startujici-legenda"
    >
      nedokončeno
    </span>
    <span
      className="Startujici-na-trase Startujici-legenda"
    >
      na trase
    </span>
  </div>
</div>
`;

exports[`třináct startujících 1`] = `
<div>
  <table
    className="Startujici-table table table-striped table-bordered table-condensed"
  >
    <tbody>
      <tr>
        <td
          className="Startujici-na-trase"
          onClick={[Function]}
        >
          7
        </td>
        <td
          className="Startujici-na-trase"
          onClick={[Function]}
        >
          4
        </td>
        <td
          className="Startujici-dokonceno"
          onClick={[Function]}
        >
          16
        </td>
        <td
          className="Startujici-nedokonceno"
          onClick={[Function]}
        >
          25
        </td>
        <td
          className="Startujici-dokonceno"
          onClick={[Function]}
        >
          9
        </td>
        <td
          className="Startujici-dokonceno"
          onClick={[Function]}
        >
          15
        </td>
        <td
          className="Startujici-nedokonceno"
          onClick={[Function]}
        >
          1
        </td>
        <td
          className="Startujici-na-trase"
          onClick={[Function]}
        >
          8
        </td>
        <td
          className="Startujici-na-trase"
          onClick={[Function]}
        >
          59
        </td>
        <td
          className="Startujici-na-trase"
          onClick={[Function]}
        >
          43
        </td>
      </tr>
      <tr>
        <td
          className="Startujici-nedokonceno"
          onClick={[Function]}
        >
          42
        </td>
        <td
          className="Startujici-dokonceno"
          onClick={[Function]}
        >
          33
        </td>
        <td
          className="Startujici-nedokonceno"
          onClick={[Function]}
        >
          21
        </td>
        <td
          className="Startujici-dokonceno"
          onClick={[Function]}
        >
          24
        </td>
        <td
          className="Startujici-na-trase"
          onClick={[Function]}
        >
          25
        </td>
        <td
          className="Startujici-na-trase"
          onClick={[Function]}
        >
          22
        </td>
        <td
          className="Startujici-na-trase"
          onClick={[Function]}
        >
          30
        </td>
        <td
          className="Startujici-dokonceno"
          onClick={[Function]}
        >
          23
        </td>
        <td
          className="Startujici-na-trase"
          onClick={[Function]}
        >
          26
        </td>
      </tr>
    </tbody>
  </table>
  <div>
    <span>
      legenda:
    </span>
    <span
      className="Startujici-dokonceno Startujici-legenda"
    >
      dokončeno
    </span>
    <span
      className="Startujici-nedokonceno Startujici-legenda"
    >
      nedokončeno
    </span>
    <span
      className="Startujici-na-trase Startujici-legenda"
    >
      na trase
    </span>
  </div>
</div>
`;

exports[`žádný startující 1`] = `
<div>
  <table
    className="Startujici-table table table-striped table-bordered table-condensed"
  >
    <tbody />
  </table>
  <div>
    <span>
      legenda:
    </span>
    <span
      className="Startujici-dokonceno Startujici-legenda"
    >
      dokončeno
    </span>
    <span
      className="Startujici-nedokonceno Startujici-legenda"
    >
      nedokončeno
    </span>
    <span
      className="Startujici-na-trase Startujici-legenda"
    >
      na trase
    </span>
  </div>
</div>
`;
